# lanceql

./: .gitignore  .gitmodules  JOIN_IMPLEMENTATION.md  LOGIC_TABLE.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  build.zig  build.zig.zon  build_err.txt  logs.test  logs_verify.test  package-lock.json  parse_comparison.zig.tmp  patch_sql.py  test-join-node.js  test-local-database.js  test-sql-parser.js  test-sqljs-compat.js
.build/: metal0_main_1766960738950.zig  metal0_main_1767110191781.zig
.github/: dependabot.yml
.github/workflows/: coverage.yml  (+7 more)
.metal0/: logic_table_simple_logic_table_1766853720182.zig  logic_table_vector_ops_1766857949865.zig  logic_table_vector_ops_1766971541604.zig
benchmarks/: 01_time_travel.py  02_updates.py  03_vector_search.py  04_query_speed.py  05_compression.py  06_read_performance.py  08_scale_tests.py  10_parquet_api.py  README.md  bench_analytics.zig  bench_column_io.zig  bench_compiled_logic_table.zig  bench_embedding_pipeline.zig  bench_feature_engineering.zig  bench_hybrid_search.zig  bench_ingest_formats.py  bench_inprocess.zig  bench_inprocess_all.py  bench_logic_table.zig  bench_logic_table_e2e.zig  bench_parquet.zig  bench_parquet_vs_pyarrow.py  bench_pushdown.zig  bench_query_formats.py  bench_rag_pipeline.zig  bench_sql_clauses.zig  bench_tiered_dispatch.zig  bench_vector_ops.zig  bench_vs_polars_duckdb.py  bench_window_functions.zig  benchmark_results.json  compare.py  compare_engines.sh  generate_benchmark_data.py  ingest_benchmark_results.json  ml_workflow.py  query_benchmark_results.json  run_all.py  run_comparison.sh  simple_logic_table.py  (+2 more)
docs/: ARCHITECTURE.md  BROWSER_STATE_PLAN.md  FEATURE_COMPARISON.md  LOGIC_TABLE_IMPLEMENTATION.md  SQL_REFERENCE.md  VECTOR_SEARCH.md  lanceql.js  lanceql.wasm
fixtures/: generate.py  generate_all.py  generate_better_sqlite3_fixtures.py  generate_distinct_fixture.py  generate_parquet.py  generate_sidecar.py  generate_simple_fixture.py  generate_timestamp_fixture.py  generate_types_fixture.py  requirements.txt
python/: build_lib.sh  pyproject.toml
python/.build/: metal0_main_1767110697239.zig
python/lanceql-jupyterlab/: .gitignore  LICENSE  README.md  demo.ipynb  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
python/lanceql-jupyterlab/lanceql_jupyterlab/: __init__.py
python/lanceql-jupyterlab/lanceql_jupyterlab/labextension/: build_log.json  package.json
python/lanceql-jupyterlab/lanceql_jupyterlab/labextension/static/: lib_index_js.36d2f5a8e69d00984231.js  lib_index_js.36d2f5a8e69d00984231.js.map  remoteEntry.2ffa064b3f7be8ed00d4.js  remoteEntry.2ffa064b3f7be8ed00d4.js.map  style.js  style_index_css.3dffe381be27cabfcc0a.js  style_index_css.3dffe381be27cabfcc0a.js.map
python/lanceql-jupyterlab/src/: index.ts
python/lanceql-jupyterlab/style/: index.css
python/metal0/lanceql/: __init__.py  __main__.py  _native.py  _wasm.py  api.py  cache.py  compiler.py  display.py  logic_table.py  parquet.py  polars.py  remote.py  vector.py
python/tests/: __init__.py  test_cli.py  test_logic_table_compiler.py  test_parquet.py  test_parquet_api.py  test_polars_api.py  test_pyarrow_compat.py
scripts/: bench-logic-table.sh  bench-sql.sh  translate_captions.py
src/: arrow_c.zig  arrow_table.zig  avro_table.zig  cli.zig  dataframe.zig  lanceql.zig  nodejs.zig  orc_table.zig  parquet_table.zig  python.zig  table.zig  wasm.zig  xlsx_table.zig
tests/: test_integration.zig  test_parquet.zig  test_sql_executor.zig  wasm_test.mjs
(+215 files in other folders)
